--- a/HTML/Project/Education.html
+++ b/HTML/Project/Education.html
@@ -6,8 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
 </head>
+
 <body>
-    <!--Header-->
+    <header>
+        <h1>My Portfolio</h1>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
+
+
+    Header
     <h1><a href="./index.html">Dwij Mistry</a> </h1>
     <p>
         <center>
