--- a/HTML/Project/index.html
+++ b/HTML/Project/index.html
@@ -6,7 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
 </head>
+
 <body>
+    <header>
+        <h1><a href="./index.html">My Portfolio</a></h1>
+        <p>
+            <a href="https://www.linkedin.com/in/dwijmistry11/" target="_main"><img src="./Resources/linkedin.png" width="50"></a> 
+            <a href="https://github.com/dwijmistry11" target="_main"><img src="./Resources/Github.png" width="50"></a>
+        </p>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
     <!--Header-->
     <h1><a href="./index.html">Dwij Mistry</a> </h1>
     <p>
