--- a/HTML/Project/Education.html
+++ b/HTML/Project/Education.html
@@ -9,29 +9,14 @@
 
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <div>  </div>
+        <pre> <h1><a href="./index.html">My Portfolio</a></h1>
+    <a href="https://www.linkedin.com/in/dwijmistry11/" target="_blank"><img src="./Resources/linkedin.png" width="50"></a>  <a href="https://github.com/dwijmistry11" target="_blank"><img src="./Resources/Github.png" width="50"></a>      <a href="./Experiance.html">Experiance</a>                  <a href="./Projects.html">Projects</a>                   <a href="./Education.html">Education</a>
+        </pre>
+        <hr>
     </header>
     <main>
-
-    </main>
-    <footer>
-
-    </footer>
-
-
-
-    Header
-    <h1><a href="./index.html">Dwij Mistry</a> </h1>
-    <p>
-        <center>
-            <a href="./Experiance.html">Experiance</a>
-            <a href="./Projects.html">Projects</a>
-            <a href="./Education.html">Education</a>
-        </center>
-    </p>
-    <hr>
-    <!--body-->
-    <center><h1>Education</h1></center>
+        <center><h1>Education</h1></center>
     <p>
         <b><big>:Degree:</big></b> <br />
         Collage name: <br />
@@ -63,19 +48,21 @@
         Start date: <br />
         End date: <br />
     </p>
-    <!--Footer-->
-    <p>
-        <hr>
-        <hr>
-        <sub>
-            <i>@ All right reserved 1995-2023 </i>
-        </sub>
-        <sup>
-            <b>
-                <a href="https://dwijmistry.com">Dwij Mistry</a>
-            </b>
-        </sup>
-    </p>
+    </main>
+    <footer>
+        <p>
+            <hr>
+            <hr>
+            <sub>
+                <i>@ All right reserved 1995-2023 </i>
+            </sub>
+            <sup>
+                <b>
+                    <a href="https://dwijmistry.com" target="_blank">Dwij Mistry</a>
+                </b>
+            </sup>
+        </p>
+    </footer>
 
 </body>
 </html>
