--- a/HTML/Project/Projects.html
+++ b/HTML/Project/Projects.html
@@ -6,29 +6,242 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
 </head>
-<body>
-    <h1><a href="./index.html">Dwij Mistry</a> </h1>
-    <p>
-        <center>
-            <a href="./Experiance.html">Experiance</a>
-            <a href="./Projects.html">Projects</a>
-            <a href="./Education.html">Education</a>
-        </center>
-    </p>
-    <hr>
 
-    <!--Footer-->
-    <p>
+<body>
+    <header>
+        <div>  </div>
+        <pre> <h1><a href="./index.html">My Portfolio</a></h1>
+    <a href="https://www.linkedin.com/in/dwijmistry11/" target="_blank"><img src="./Resources/linkedin.png" width="50"></a>  <a href="https://github.com/dwijmistry11" target="_blank"><img src="./Resources/Github.png" width="50"></a>      <a href="./Experiance.html">Experiance</a>                  <a href="./Projects.html">Projects</a>                   <a href="./Education.html">Education</a>
+        </pre>
         <hr>
-        <hr>
-        <sub>
-            <i>@ All right reserved 1995-2023 </i>
-        </sub>
-        <sup>
-            <b>
-                <a href="https://dwijmistry.com">Dwij Mistry</a>
-            </b>
-        </sup>
-    </p>
+    </header>
+    <main>
+        <section>
+            <h2>Projects</h2>
+        </section>
+        <section>
+            <div>
+                <p>
+                    <b><i><big>Project title:</big></i></b>
+                    <br/>
+                    <b>Intro:</b>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, recusandae laudantium. Doloremque accusantium, autem obcaecati dicta eum debitis reprehenderit ducimus. Veritatis doloremque obcaecati officia quos sed cum qui aspernatur nobis?
+                    <br/>
+                    <b>Technology used:</b>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit nesciunt aliquam illo eveniet sunt ducimus impedit perspiciatis soluta tempora. Delectus esse modi laudantium porro ad dolorum distinctio molestias odit?
+                    <br/>
+                    <b>Evaluation metrix:</b>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                            </tr>
+                            <tr>
+                                <th>4</th>
+                                <th>5</th>
+                                <th>6</th>
+                            </tr>
+                            <tr>
+                                <th>7</th>
+                                <th>8</th>
+                                <th>9</th>
+                            </tr>
+                        </thead>
+                    </table>
+                    <br/>
+                    <br/>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b><i><big>Project title:</big></i></b>
+                    <br/>
+                    <b>Intro:</b>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, recusandae laudantium. Doloremque accusantium, autem obcaecati dicta eum debitis reprehenderit ducimus. Veritatis doloremque obcaecati officia quos sed cum qui aspernatur nobis?
+                    <br/>
+                    <b>Technology used:</b>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit nesciunt aliquam illo eveniet sunt ducimus impedit perspiciatis soluta tempora. Delectus esse modi laudantium porro ad dolorum distinctio molestias odit?
+                    <br/>
+                    <b>Evaluation metrix:</b>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                            </tr>
+                            <tr>
+                                <th>4</th>
+                                <th>5</th>
+                                <th>6</th>
+                            </tr>
+                            <tr>
+                                <th>7</th>
+                                <th>8</th>
+                                <th>9</th>
+                            </tr>
+                        </thead>
+                    </table>
+                    <br/>
+                    <br/>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b><i><big>Project title:</big></i></b>
+                    <br/>
+                    <b>Intro:</b>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, recusandae laudantium. Doloremque accusantium, autem obcaecati dicta eum debitis reprehenderit ducimus. Veritatis doloremque obcaecati officia quos sed cum qui aspernatur nobis?
+                    <br/>
+                    <b>Technology used:</b>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit nesciunt aliquam illo eveniet sunt ducimus impedit perspiciatis soluta tempora. Delectus esse modi laudantium porro ad dolorum distinctio molestias odit?
+                    <br/>
+                    <b>Evaluation metrix:</b>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                            </tr>
+                            <tr>
+                                <th>4</th>
+                                <th>5</th>
+                                <th>6</th>
+                            </tr>
+                            <tr>
+                                <th>7</th>
+                                <th>8</th>
+                                <th>9</th>
+                            </tr>
+                        </thead>
+                    </table>
+                    <br/>
+                    <br/>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b><i><big>Project title:</big></i></b>
+                    <br/>
+                    <b>Intro:</b>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, recusandae laudantium. Doloremque accusantium, autem obcaecati dicta eum debitis reprehenderit ducimus. Veritatis doloremque obcaecati officia quos sed cum qui aspernatur nobis?
+                    <br/>
+                    <b>Technology used:</b>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit nesciunt aliquam illo eveniet sunt ducimus impedit perspiciatis soluta tempora. Delectus esse modi laudantium porro ad dolorum distinctio molestias odit?
+                    <br/>
+                    <b>Evaluation metrix:</b>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                            </tr>
+                            <tr>
+                                <th>4</th>
+                                <th>5</th>
+                                <th>6</th>
+                            </tr>
+                            <tr>
+                                <th>7</th>
+                                <th>8</th>
+                                <th>9</th>
+                            </tr>
+                        </thead>
+                    </table>
+                    <br/>
+                    <br/>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b><i><big>Project title:</big></i></b>
+                    <br/>
+                    <b>Intro:</b>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, recusandae laudantium. Doloremque accusantium, autem obcaecati dicta eum debitis reprehenderit ducimus. Veritatis doloremque obcaecati officia quos sed cum qui aspernatur nobis?
+                    <br/>
+                    <b>Technology used:</b>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit nesciunt aliquam illo eveniet sunt ducimus impedit perspiciatis soluta tempora. Delectus esse modi laudantium porro ad dolorum distinctio molestias odit?
+                    <br/>
+                    <b>Evaluation metrix:</b>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                            </tr>
+                            <tr>
+                                <th>4</th>
+                                <th>5</th>
+                                <th>6</th>
+                            </tr>
+                            <tr>
+                                <th>7</th>
+                                <th>8</th>
+                                <th>9</th>
+                            </tr>
+                        </thead>
+                    </table>
+                    <br/>
+                    <br/>
+                </p>
+            </div>
+            <div>
+                <p>
+                    <b><i><big>Project title:</big></i></b>
+                    <br/>
+                    <b>Intro:</b>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi, recusandae laudantium. Doloremque accusantium, autem obcaecati dicta eum debitis reprehenderit ducimus. Veritatis doloremque obcaecati officia quos sed cum qui aspernatur nobis?
+                    <br/>
+                    <b>Technology used:</b>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem reprehenderit nesciunt aliquam illo eveniet sunt ducimus impedit perspiciatis soluta tempora. Delectus esse modi laudantium porro ad dolorum distinctio molestias odit?
+                    <br/>
+                    <b>Evaluation metrix:</b>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                            </tr>
+                            <tr>
+                                <th>4</th>
+                                <th>5</th>
+                                <th>6</th>
+                            </tr>
+                            <tr>
+                                <th>7</th>
+                                <th>8</th>
+                                <th>9</th>
+                            </tr>
+                        </thead>
+                    </table>
+                    <br/>
+                    <br/>
+                </p>
+            </div>
+
+        </section>
+        
+    </main>
+    <footer>
+        <p>
+            <hr>
+            <hr>
+            <sub>
+                <i>@ All right reserved 1995-2023 </i>
+            </sub>
+            <sup>
+                <b>
+                    <a href="https://dwijmistry.com" target="_blank">Dwij Mistry</a>
+                </b>
+            </sup>
+        </p>
+    </footer>
+
 </body>
 </html>
