--- a/HTML/Project/Experiance.html
+++ b/HTML/Project/Experiance.html
@@ -6,29 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experiance</title>
 </head>
-<body>
-    <h1><a href="./index.html">Dwij Mistry</a> </h1>
-    <p>
-        <center>
-            <a href="./Experiance.html">Experiance</a>
-            <a href="./Projects.html">Projects</a>
-            <a href="./Education.html">Education</a>
-        </center>
-    </p>
-    <hr>
 
-    <!--Footer-->
-    <p>
+<body>
+    <header>
+        <div>  </div>
+        <pre> <h1><a href="./index.html">My Portfolio</a></h1>
+    <a href="https://www.linkedin.com/in/dwijmistry11/" target="_blank"><img src="./Resources/linkedin.png" width="50"></a>  <a href="https://github.com/dwijmistry11" target="_blank"><img src="./Resources/Github.png" width="50"></a>      <a href="./Experiance.html">Experiance</a>                  <a href="./Projects.html">Projects</a>                   <a href="./Education.html">Education</a>
+        </pre>
         <hr>
-        <hr>
-        <sub>
-            <i>@ All right reserved 1995-2023 </i>
-        </sub>
-        <sup>
-            <b>
-                <a href="https://dwijmistry.com">Dwij Mistry</a>
-            </b>
-        </sup>
-    </p>
+    </header>
+    <main>
+        <section>
+            <div>
+                <h2>Company name</h2>
+                <sup>Start year - End year</sup>
+                <br/>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aspernatur non tempore vero ea. Voluptatem odit atque blanditiis, ratione non nihil vitae maxime quam consectetur cum fugiat! Dolore, nesciunt quisquam.
+                <br/>
+                <br/>
+            </div>
+            <div>
+                <h2>Company name</h2>
+                <sup>Start year - End year</sup>
+                <br/>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aspernatur non tempore vero ea. Voluptatem odit atque blanditiis, ratione non nihil vitae maxime quam consectetur cum fugiat! Dolore, nesciunt quisquam.
+                <br/>
+                <br/>
+            </div>
+            <div>
+                <h2>Company name</h2>
+                <sup>Start year - End year</sup>
+                <br/>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aspernatur non tempore vero ea. Voluptatem odit atque blanditiis, ratione non nihil vitae maxime quam consectetur cum fugiat! Dolore, nesciunt quisquam.
+                <br/>
+                <br/>
+            </div>
+            <div>
+                <h2>Company name</h2>
+                <sup>Start year - End year</sup>
+                <br/>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos aspernatur non tempore vero ea. Voluptatem odit atque blanditiis, ratione non nihil vitae maxime quam consectetur cum fugiat! Dolore, nesciunt quisquam.
+                <br/>
+                <br/>
+            </div>
+        </section>
+        
+    </main>
+    <footer>
+        <p>
+            <hr>
+            <hr>
+            <sub>
+                <i>@ All right reserved 1995-2023 </i>
+            </sub>
+            <sup>
+                <b>
+                    <a href="https://dwijmistry.com" target="_blank">Dwij Mistry</a>
+                </b>
+            </sup>
+        </p>
+    </footer>
+
 </body>
 </html>
