--- a/HTML/Project/index.html
+++ b/HTML/Project/index.html
@@ -9,54 +9,39 @@
 
 <body>
     <header>
-        <h1><a href="./index.html">My Portfolio</a></h1>
-        <p>
-            <a href="https://www.linkedin.com/in/dwijmistry11/" target="_main"><img src="./Resources/linkedin.png" width="50"></a> 
-            <a href="https://github.com/dwijmistry11" target="_main"><img src="./Resources/Github.png" width="50"></a>
-        </p>
+        <div>  </div>
+        <pre> <h1><a href="./index.html">My Portfolio</a></h1>
+    <a href="https://www.linkedin.com/in/dwijmistry11/" target="_blank"><img src="./Resources/linkedin.png" width="50"></a>  <a href="https://github.com/dwijmistry11" target="_blank"><img src="./Resources/Github.png" width="50"></a>      <a href="./Experiance.html">Experiance</a>                  <a href="./Projects.html">Projects</a>                   <a href="./Education.html">Education</a>
+        </pre>
+        <hr>
     </header>
     <main>
-
+        <center>
+            <img src="../dwij.jpeg" alt="dwijmistry" height="500">
+        </center>
+        <center>
+            <big>
+                This is a Dwij Mistry
+            </big>
+        </center>
+        <center>
+            <small>Please go through the menu to know more about him.</small>
+        </center>
     </main>
     <footer>
-
+        <p>
+            <hr>
+            <hr>
+            <sub>
+                <i>@ All right reserved 1995-2023 </i>
+            </sub>
+            <sup>
+                <b>
+                    <a href="https://dwijmistry.com" target="_blank">Dwij Mistry</a>
+                </b>
+            </sup>
+        </p>
     </footer>
 
-    <!--Header-->
-    <h1><a href="./index.html">Dwij Mistry</a> </h1>
-    <p>
-        <center>
-            <a href="./Experiance.html">Experiance</a>
-            <a href="./Projects.html">Projects</a>
-            <a href="./Education.html">Education</a>
-        </center>
-    </p>
-    <hr>
-    <!--Body-->
-
-    <center>
-        <img src="../dwij.jpeg" alt="dwijmistry" height="500">
-    </center>
-    <center>
-        <big>
-            This is a Dwij Mistry
-        </big>
-    </center>
-    <center>
-        <small>Please go through the menu to know more about him.</small>
-    </center>
-    <!--Footer-->
-    <p>
-        <hr>
-        <hr>
-        <sub>
-            <i>@ All right reserved 1995-2023 </i>
-        </sub>
-        <sup>
-            <b>
-                <a href="https://dwijmistry.com">Dwij Mistry</a>
-            </b>
-        </sup>
-    </p>
 </body>
 </html>
