Added contact me form

--- a/HTML/Project/Education.html
+++ b/HTML/Project/Education.html
@@ -53,6 +53,7 @@
         <p>
             <hr>
             <hr>
+            <a href="./Contact-me.html">Contact me</a> <br/>
             <sub>
                 <i>@ All right reserved 1995-2023 </i>
             </sub>
