--- a/HTML/Project/index.html
+++ b/HTML/Project/index.html
@@ -32,6 +32,7 @@
         <p>
             <hr>
             <hr>
+            <a href="./Contact-me.html">Contact me</a> <br/>
             <sub>
                 <i>@ All right reserved 1995-2023 </i>
             </sub>
@@ -40,6 +41,7 @@
                     <a href="https://dwijmistry.com" target="_blank">Dwij Mistry</a>
                 </b>
             </sup>
+            
         </p>
     </footer>
 
