--- a/HTML/Project/Projects.html
+++ b/HTML/Project/Projects.html
@@ -232,6 +232,7 @@
         <p>
             <hr>
             <hr>
+            <a href="./Contact-me.html">Contact me</a> <br/>
             <sub>
                 <i>@ All right reserved 1995-2023 </i>
             </sub>
